--- a/pokemon-api-app/src/App.css
+++ b/pokemon-api-app/src/App.css
@@ -1,3 +1,7 @@
+body{
+  background-color:papayawhip;
+}
+
 .App {
   text-align: center;
 }
@@ -29,4 +33,9 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+li{
+  list-style: none;
+  padding: 5px;
 }
